# bioledger

./: .env.example  .gitignore  README.md  pyproject.toml
examples/csv_to_isatab/: README.md  samples.csv
examples/galaxy_tool_import/: README.md  fastqc.xml
examples/hello_bioledger/: README.md  line_counter.bioledger.yaml
examples/hello_bioledger/data/: a_assay.txt  i_investigation.txt  s_study.txt
src/bioledger/: __init__.py  config.py
src/bioledger/apps/: __init__.py
src/bioledger/apps/cli/: main.py
src/bioledger/core/: __init__.py  forge.py
src/bioledger/core/containers/: __init__.py  docker.py
src/bioledger/core/llm/: __init__.py  agents.py  config.py  context.py  tracking.py
src/bioledger/core/ontology/: __init__.py  lookup.py
src/bioledger/forges/: __init__.py
src/bioledger/forges/analysisforge/: __init__.py  agent.py  crystallize.py  executor.py  suggest.py
src/bioledger/forges/crateforge/: __init__.py  builder.py
src/bioledger/forges/isaforge/: __init__.py  agent.py  builder.py  dataset.py  download.py  models.py  validate.py
src/bioledger/forges/toolforge/: __init__.py  agent.py  registry.py
src/bioledger/ledger/: __init__.py  models.py  store.py
src/bioledger/toolspec/: README.md  __init__.py  load.py  models.py  sources.py  store.py  validate.py
tests/: conftest.py  test_analysisforge_agent.py  test_context.py  test_crystallize.py  test_csv_to_isatab.py  test_ledger_models.py  test_ledger_store.py  test_toolspec_load_store.py  test_toolspec_models.py  test_toolspec_validate.py  test_translators.py
(+4 files in other folders)
