[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bioledger"
version = "0.1.0"
description = "Provenance-tracking interactive analysis environment for bioinformatics"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.10,<3",
    "pydantic-ai>=0.1,<1",
    "pydantic-settings>=2.7,<3",
    "litellm>=1.55,<2",
    "jinja2>=3.1",
    "tenacity>=8.0",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "rich>=13.0",
]

[project.optional-dependencies]
isaforge = [
    "isatools>=0.14",
    "pronto>=2.5",
]
toolforge = [
    "docker>=7.0",
]
analysis = [
    "rocrate>=0.11",
    "docker>=7.0",
]
crateforge = [
    "rocrate>=0.11",
]
cli = [
    "typer>=0.15",
    "rich>=13.0",
]
api = [
    "fastapi>=0.115",
    "uvicorn>=0.34",
]
galaxy = [
    "bioblend>=1.4",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "ruff>=0.8",
    "mypy>=1.13",
]

[project.scripts]
bioledger = "bioledger.apps.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/bioledger"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: requires Docker daemon",
    "llm_eval: requires LLM API key (manual/nightly)",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
